# Text_to_KnowledgeGraph

./: Api.py  CNAME  README.md  gradio_Sample.py  gradio_interface.py  pyproject.toml  requirements.txt
data_output/: chunks.csv  graph.csv
helpers/: prompts.py
