[tool.poetry]
name = "text-to-knowledgegraph"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "23.2.1"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
altair = "5.3.0"
annotated-types = "0.7.0"
anyio = "4.4.0"
asttokens = "2.4.1"
attrs = "23.2.0"
certifi = "2024.6.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
contourpy = "1.2.1"
cycler = "0.12.1"
dataclasses-json = "0.6.7"
decorator = "5.1.1"
dnspython = "2.6.1"
email-validator = "2.1.1"
executing = "2.0.1"
fastapi = "0.111.0"
fastapi-cli = "0.0.4"
ffmpy = "0.3.2"
filelock = "3.14.0"
fonttools = "4.53.0"
frozenlist = "1.4.1"
fsspec = "2024.6.0"
gradio = "4.36.1"
gradio-client = "1.0.1"
greenlet = "3.0.3"
h11 = "0.14.0"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.27.0"
huggingface-hub = "0.23.3"
idna = "3.7"
importlib-resources = "6.4.0"
ipython = "8.25.0"
jedi = "0.19.1"
jinja2 = "3.1.4"
jsonpatch = "1.33"
jsonpickle = "3.2.1"
jsonpointer = "3.0.0"
jsonschema = "4.22.0"
jsonschema-specifications = "2023.12.1"
kiwisolver = "1.4.5"
langchain = "0.2.3"
langchain-community = "0.2.4"
langchain-core = "0.2.5"
langchain-text-splitters = "0.2.1"
langsmith = "0.1.76"
logging = "0.4.9.6"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
marshmallow = "3.21.3"
matplotlib = "3.9.0"
matplotlib-inline = "0.1.7"
mdurl = "0.1.2"
multidict = "6.0.5"
mypy-extensions = "1.0.0"
networkx = "3.3"
numpy = "1.26.4"
orjson = "3.10.4"
packaging = "23.2"
pandas = "2.2.2"
parso = "0.8.4"
pillow = "10.3.0"
prompt-toolkit = "3.0.47"
pure-eval = "0.2.2"
pydantic = "2.7.3"
pydantic-core = "2.18.4"
pydub = "0.25.1"
pygments = "2.18.0"
pyparsing = "3.1.2"
pypdf = "4.2.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
pytz = "2024.1"
pyvis = "0.3.2"
pyyaml = "6.0.1"
referencing = "0.35.1"
requests = "2.32.3"
rich = "13.7.1"
rpds-py = "0.18.1"
ruff = "0.4.8"
seaborn = "0.13.2"
semantic-version = "2.10.0"
setuptools = "70.0.0"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.30"
stack-data = "0.6.3"
starlette = "0.37.2"
tenacity = "8.3.0"
tomlkit = "0.12.0"
toolz = "0.12.1"
tqdm = "4.66.4"
traitlets = "5.14.3"
typer = "0.12.3"
typing-inspect = "0.9.0"
typing-extensions = "4.12.2"
tzdata = "2024.1"
ujson = "5.10.0"
urllib3 = "2.2.1"
uvicorn = "0.30.1"
watchfiles = "0.22.0"
wcwidth = "0.2.13"
websockets = "11.0.3"
yachalk = "0.1.5"
yarl = "1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
